[package]
name = "layertuber"
version = "0.1.0"
edition = "2021"

[build-dependencies]
subprocess = "0.2.9"

[dependencies]
dirs = "4.0"
lazy_static = "1.4"
png = "0.17.5"
serde = { version = "1.0", features = ["serde_derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0"
serde_yaml = "0.9.11"
subprocess = "0.2"
three-d = "0.13"
three-d-asset = { version = "0.3.0", features = ["png"] }
zip = "0.6"
