[metadata]
name = layertuber
version = 0.0.1
author = colons
long_description = file: README.rst
classifiers =
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
dev =
  flake8
  flake8-bugbear
  flake8-import-order
  flake8-class-attributes-order
  mypy

[flake8]
extend_exclude = ./src/layertuber/vendor/
max-line-length = 120

[mypy]
files = src/layertuber
exclude = ^(src/layertuber/vendor/.*)$
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
