[metadata]
name = layertuber
version = 0.0.1
author = colons
long_description = file: README.rst
classifiers =
  Programming Language :: Python :: 3

[options]
packages = find_namespace:
package_dir =
  = src
python_requires = >=3.8
install_requires =
  Pillow==8.3.2
  numpy>=1.21.3
  onnxruntime>=1.9.0
  opencv-python>=4.5.4
  pyora>=0.3.11,<0.4
  pygame>=2.0.0

[options.extras_require]
dev =
  flake8
  flake8-bugbear
  flake8-class-attributes-order
  flake8-import-order
  mypy
  types-pillow==8.3.8

[flake8]
extend_exclude = ./src/layertuber/vendor/,./build/
max-line-length = 120

[options.packages.find]
where = src

[mypy]
files = src/layertuber
exclude = ^(src/layertuber/vendor/.*)$
ignore_missing_imports = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
