[metadata]
name = layertuber
version = 0.0.3
author = colons
project_urls =
  Source = "https://github.com/colons/layertuber"
long_description = file: README.rst
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Topic :: Multimedia :: Video

[options]
packages = find_namespace:
package_dir =
  = src
python_requires = >=3.8
include_package_data = True
install_requires =
  Pillow==8.3.2
  numpy>=1.21.3
  onnxruntime>=1.9.0
  opencv-python>=4.5.4
  pycairo>=1.20.1
  PyGObject>=3.42.0,<4
  pydantic>=1.8.2,<2.0
  pyora>=0.3.11,<0.4
  pygame>=2.0.0
  pyyaml>=6.0
  scipy>=1.7.3

[options.package_data]
* = *.onnx, *.json

[options.entry_points]
console_scripts =
  layertuber = layertuber:main
  # layertuber-editor = layertuber.editor:main

[options.extras_require]
dev =
  flake8
  flake8-bugbear
  flake8-class-attributes-order
  flake8-import-order
  mypy
  types-pillow>=8.3.8
  types-pyyaml>=6.0
  flake8-literal

[flake8]
extend_exclude = ./src/layertuber/vendor/,./build/
max-line-length = 120

[options.packages.find]
where = src

[mypy]
files = src/layertuber
exclude = ^(src/layertuber/vendor/.*)$
ignore_missing_imports = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
